--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+}
+
+.contestants {
+  background-color: rgba(115, 181, 235, 0.5);
+  display: flex;
+  flex: 0.8;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.contestant{
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+}
+
+.contestant > img{
+  width: 100px;
+  height: 100px;
+}
+
+.categories{
+  background-color: rgba(0, 45, 81, 0.5);
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex: 0.2;
 }
 
-.App-link {
-  color: #61dafb;
+.subcategory{
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subcategory > .ant-btn img{
+  align-items: center;
+  width: 100px;
+  height: 100px;
+}
+
+.subcategory > .ant-btn{
+  margin: 2px;
 }
