--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 .contestants {
   background-color: rgba(115, 181, 235, 0.5);
   display: flex;
-  flex: 0.8;
+  flex: 0.6;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -28,7 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 0.2;
+  flex: 0.4;
 }
 
 .subcategory{
@@ -44,5 +44,36 @@
 }
 
 .subcategory > .ant-btn{
+  width: 200px;
+  background-color: rgb(167, 181, 228);
+}
+
+.subcategory > .ant-btn{
   margin: 2px;
+}
+
+.QuestionScreen{
+  display: flex;
+  flex:0.3;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.clue > .ant-btn{
+  width: 200px;
+  height: 200px;
+  background-color: rgb(167, 181, 228);
+}
+
+.newQuestion{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.timerBar{
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
