--- a/src/App.css
+++ b/src/App.css
@@ -52,9 +52,17 @@
   margin: 2px;
 }
 
+.roundOne{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 0.3;
+}
+
 .QuestionScreen{
   display: flex;
-  flex:0.3;
+  width: 80vw;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -65,15 +73,31 @@
   background-color: rgb(167, 181, 228);
 }
 
-.newQuestion{
+.hostButtons{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.hostButtons > .ant-btn{
+  font-weight: bold;
+}
+
+.timerBar{
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.timerBar{
-  margin-top: 10px;
+.clueConnection{
+  color: white;
+  font-size: 30px;
   display: flex;
+  height: 50px;
+  width: 73vw;
   justify-content: center;
   align-items: center;
+  margin: 10px;
+  background-color: rgb(4, 39, 76);
 }
