--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
 }
 
 .clue > .ant-btn{
+  font-size: 20px;
   width: 200px;
   height: 200px;
   background-color: rgb(167, 181, 228);
@@ -84,6 +85,8 @@
 }
 
 .timerBar{
+  font-size: 25px;
+  font-weight: bold;
   margin: 10px;
   display: flex;
   justify-content: center;
