--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: rgb(113, 200, 253);
 }
 
 .contestants {
-  background-color: rgba(115, 181, 235, 0.5);
+  background-color: rgba(45, 51, 239, 0.5);
   display: flex;
   flex: 0.6;
   align-items: center;
@@ -74,6 +75,10 @@
   background-color: rgb(167, 181, 228);
 }
 
+.clue:not(:first-child) > .ant-btn > span{
+  display: none;
+}
+
 .hostButtons{
   display: flex;
   justify-content: space-around;
@@ -85,12 +90,16 @@
 }
 
 .timerBar{
-  font-size: 25px;
+  font-size: 15px;
   font-weight: bold;
   margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(255, 255, 255);
+  transition: width 25s linear;
+  width: 73vw;
+  white-space: nowrap;
 }
 
 .clueConnection{
