--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex: 0.3;
 }
 
@@ -112,4 +112,15 @@
   align-items: center;
   margin: 10px;
   background-color: rgb(4, 39, 76);
+}
+
+.clueTimeBarOne, .clueTimeBarTwo, .clueTimeBarThree, .clueTimeBarFour{
+  background-color: rgb(255, 255, 255);
+  width: 0px;
+  transition: width 10s linear;
+  white-space: nowrap;
+}
+
+.clueTimeBarTwo, .clueTimeBarThree, .clueTimeBarFour{
+  visibility: hidden;
 }
