--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,19 @@
   flex: 0.6;
   align-items: center;
   justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.realContestants{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.buttonReset{
+  display: flex;
 }
 
 .contestant{
@@ -89,19 +102,6 @@
   font-weight: bold;
 }
 
-.timerBar{
-  font-size: 15px;
-  font-weight: bold;
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(255, 255, 255);
-  transition: width 25s linear;
-  width: 73vw;
-  white-space: nowrap;
-}
-
 .clueConnection{
   color: white;
   font-size: 30px;
@@ -115,6 +115,9 @@
 }
 
 .clueTimeBarOne, .clueTimeBarTwo, .clueTimeBarThree, .clueTimeBarFour{
+  border-radius: 5px;
+  margin-bottom: 5px;
+  font-weight: 600;
   background-color: rgb(255, 255, 255);
   width: 0px;
   transition: width 10s linear;
