--- a/src/App.css
+++ b/src/App.css
@@ -69,14 +69,12 @@
 .roundOne{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-evenly;
   flex: 0.2;
 }
 
 .QuestionScreen{
   display: flex;
-  width: 80vw;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -107,10 +105,12 @@
   font-size: 30px;
   display: flex;
   height: 50px;
-  width: 73vw;
   justify-content: center;
   align-items: center;
-  margin: 10px;
+  margin-right: 100px;
+  margin-left: 100px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: rgb(4, 39, 76);
 }
 
@@ -120,7 +120,7 @@
   font-weight: 600;
   background-color: rgb(255, 255, 255);
   width: 0px;
-  transition: width 10s linear;
+  transition: width 7.5s linear;
   white-space: nowrap;
 }
 
